@@ -13,6 +13,9 @@ If you know something about Mac OS X and want to look at the
 carbonfile code so it can be re-enabled by default, please do so :)
 (help available from list)
 
+Fix for bug #14799 reported by Bob McKay:  Crash when backing up files
+with high permissions (like suid) to some FAT systems.
+
 
 New in v1.0.1 (2005/09/10)
 --------------------------
